Create weekly course discussion template
Add template for weekly course discussions

--- a/.github/DISCUSSION_TEMPLATE/course-discussion.yml
+++ b/.github/DISCUSSION_TEMPLATE/course-discussion.yml
@@ -1,3 +1,5 @@
+name: "Weekly Course Discussion"
+about: "Template for starting weekly course discussions."
 title: "[Week X] Topic Discussion"
 labels: ["weekly-discussion"]
 
