Add chatbot resources and update README for AI course assistant
- Updated .gitignore to exclude chatbot environment files and directories.
- Added CHATBOT.md to README for AI chatbot documentation.
- Included chatbot deployment instructions and features for students and instructors in README.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@
 .Rhistory
 .RData
 .Ruserdata
+
+# Chatbot security
+chatbot/.env
+chatbot/.env.local
+chatbot/.env.production
+chatbot/chroma_db/
+chatbot/venv/
+chatbot/__pycache__/
+chatbot/frontend/node_modules/
+chatbot/frontend/build/
