--- a/chatbot/nixpacks.toml
+++ b/chatbot/nixpacks.toml
@@ -1,10 +1,9 @@
 [phases.setup]
-nixPkgs = ["python39", "nodejs", "npm"]
+nixPkgs = ["python39"]
 
 [phases.install]
 cmds = [
-  "pip install -r requirements.txt",
-  "cd frontend && npm install && npm run build"
+  "pip install -r requirements.txt"
 ]
 
 [phases.build]
