Fix document loading: filter out system paths, add path detection logic, exclude site-packages

--- a/chatbot/nixpacks.toml
+++ b/chatbot/nixpacks.toml
@@ -9,7 +9,9 @@ cmds = [
 
 [phases.build]
 cmds = [
-  "echo 'Enhanced chatbot build completed'"
+  "echo 'Enhanced chatbot build completed'",
+  "echo 'Working directory:' && pwd",
+  "echo 'Contents:' && ls -la"
 ]
 
 [start]
